--- a/index.html
+++ b/index.html
@@ -59,21 +59,22 @@
 						<p>When I'm not working, I'm spending the time in cooking and if I had a garden I would be gardening. I love getting into the dirt, planting and watching something grow and then use it in a recipe, that equals bliss for me.</p>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
+						
+						<span>HTML <small>80%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+							</div>
+						<span>CSS <small>60%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+							</div>
+						<span>JavaScript<small>50%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+							</div>
 						<span class="text-top">Support Ninja <small>90%</small></span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
-							</div>
-						<span>HTML <small>40%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-							</div>
-						<span>CSS <small>40%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-							</div>
-						<span>JavaScript<small>40%</small></span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 							</div>
 					</div>
 				</div>
@@ -110,7 +111,22 @@
 							</div>
 					</div>
 				</div>
-				
+				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+					<div class="portfolio-thumb">
+						<a href="https://codepen.io/chetna181/full/bGvXKmK" target="_blank"><img src="images/clock.png" class="img-responsive" alt="portfolio img">
+							<div class="portfolio-overlay">
+								<h4>FAQ Page</h4>
+							</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+					<div class="portfolio-thumb">
+						<a href="https://codepen.io/chetna181/full/yLKmEqZ" target="_blank"><img src="images/Grocery list.png" class="img-responsive" alt="portfolio img">
+							<div class="portfolio-overlay">
+								<h4>FAQ Page</h4>
+							</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
