--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
 							</div>
+						<span>PHP<small>60%</small></span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+							</div>
 						<span>Suppport Ninja <small>90%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -143,7 +147,7 @@
 							<p class="contact-title">CONTACT ME</p>
 							<p><i class="fa fa-phone"></i> +310633475811</p>
 							<p><i class="fa fa-envelope-o"></i> patelchetna1122@gmail.com</p>
-							<p><i class="fa fa-map-marker"></i> Oostmaslaan, 123 B2, 3063AR, Rotterdam</p>
+							<p><i class="fa fa-map-marker"></i> Capelle aan de Ijssel, Netherlands</p>
 						</address>
 					</div>
 					<div class="col-md-1 col-sm-1"></div>
