--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.3s">
 						<h2>About Chetna</h2>
 						<h4>Customer Support Representative</h4> 
-						<p>Hello, I'm working as a customer support representative in IT Company for the WooCommerce plugins but I am aspiring to be a Web Developer. I am learning web development through the side-projects I create. The more I work on different projects, the more I learn and it gets me even more excited to code.</p>
-						<p>When I'm not working, I'm spending the time in cooking and if I had a garden I would be gardening. I love getting into the dirt, planting and watching something grow and then use it in a recipe, that equals bliss for me.</p>
-					</div>
+							<p>Hello! I currently work as a Technical Customer Support Representative at an IT company, where I assist users with WordPress plugins. While I enjoy helping users solve problems, my true passion lies in programming. I believe that the more you learn, the more confident you become — and that’s what keeps me motivated to explore web development through side projects, experimenting with code, and diving into new technologies.</p>
+
+							<p>Outside of work, I find joy in creativity, whether it's trying out new recipes in the kitchen or working on DIY art and design. It keeps me curious, inspired, and always learning — just like solving a puzzle, which I absolutely enjoy.</p></p>
+
+						</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
 						
 						<span class="text-top">HTML<small>80%</small></span>
