--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Chetna Patel | portfolio</title>
+		<title>Chetna Bhootaka | portfolio</title>
 		<meta name="keywords" content="">
-		<meta name="description" content="Online portfolio of Chetna Patel.">
+		<meta name="description" content="Online portfolio of Chetna Bhootaka">
         <meta name="author" content="templatemo">
         <!-- 
         Chetna Portfolio
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h1>Chetna Patel</h1>
+						<h1>Chetna Bhootaka</h1>
 						<h2>Computer Engineer</h2>
 					</div>
 				</div>
